# dark-hunter_sed

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-svi.txt  requirements.txt
.github/workflows/: tests.yml
darkhunter_sed/: __init__.py  batch.py  cli.py  config.py  continuum_diagnostics.py  convert_spectra.py  data.py  dust_prior.py  fit.py  initguess.py  models.py  photometry_gather.py  plotting.py  plotting_ppums.py  posterior.py  priors.py  push_m1.py  region_picker.py  spectrum.py  stellar_data.py
docs/: operations.md
scripts/: activate_ziggy.sh  cron_monthly_new_spectra.sh  cron_update_sed.sh  diagnose_continuum.py  diagnose_ums_init.py  pick_spectrum_regions.py  plot_order_blaze.py  plot_sed_posterior.py  run_local.sh  screen_sed_then_refit_rvs.sh  ship_feat_sed_pipeline.sh
scripts/patches/: uberms-dva-nspec1.patch
tests/: test_batch.py  test_continuum_diagnostics.py  test_data_regions.py  test_dust_prior.py  test_fit_priors.py  test_initguess.py  test_legacy_rv.py  test_order_blaze.py  test_phot_err_floor.py  test_photometry_ensure.py  test_plotting_ppums.py  test_posterior.py  test_priors.py  test_push_m1.py  test_region_picker.py  test_spectrum_coalesce.py  test_spectrum_trim.py  test_xla_flags.py
